# llm_internet_computer

./: .gitignore  Cargo.toml  README.md  dfx.json  dfx_ic.json  dfx_local.json  package-lock.json  package.json  webpack.config.js
scripts/: bk.rs  bk2.rs  bk3.rs  did.sh
src/my_ai_backend/: Cargo.toml  my_ai_backend.did
src/my_ai_backend/src/: lib.rs  llm.rs  memory.rs  state_machine.rs  types.rs
src/my_ai_frontend/src/: index.html  index.js
