[package]
name = "my_ai_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
ciborium = "0.2.1"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.2"
ic-cdk-timers = "0.6.0"
ic-stable-structures = "0.6.0"
serde = "1.0.193"
sha2 = "0.10.8"
candle = { package = "candle-core", path = "/Users/junkei/Documents/candle/candle-core" }
# candle = { package = "candle-core", git = "https://github.com/junkei-okinawa/candle.git", branch = "feature/config_new_for_mixformer" }
candle-nn = { git = "https://github.com/junkei-okinawa/candle.git", branch = "feature/config_new_for_mixformer" }
candle-transformers = { git = "https://github.com/junkei-okinawa/candle.git", branch = "feature/config_new_for_mixformer" }
tokenizers = { version = "0.13.4", default-features = false, features = [
  "unstable_wasm",
] }

# [dependencies]
# candid = "0.8.2"
# ic-cdk = "0.6.0"
# ic-cdk-macros = "0.6.0"
# ic-stable-structures = "0.5.1"
# serde = "1.0.152"
