[package]
name = "my_ai_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.10.0", features = ["bignum"] }
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.2"
ic-certified-map = "0.3.2"
serde = "1.0"

# === for assets ===
# ic-certified-assets = "0.2.2"
base64 = "0.13.0"
hex = "0.4.3"
ic-response-verification = "0.3.0"
ic-representation-independent-hash = "0.3.0"
itertools = "0.10.3"
num-traits = "0.2.14"
serde_bytes = "0.11.5"
serde_cbor = "0.11.2"
sha2 = "0.10.6"
ciborium = "0.2.1"
num-integer = "0.1.45"

# === for ai ===
candle = { package = "candle-core", git = "https://github.com/junkei-okinawa/candle.git", branch = "feature/for_ic_wasm" }
candle-nn = { git = "https://github.com/junkei-okinawa/candle.git", branch = "feature/for_ic_wasm" }
candle-transformers = { git = "https://github.com/junkei-okinawa/candle.git", branch = "feature/for_ic_wasm" }
tokenizers = { git = "https://github.com/junkei-okinawa/tokenizers.git", branch = "feature/for_ic_wasm", default-features = false, features = [
  "unstable_wasm",
] }
safetensors = "0.4.1"
anyhow = { version = "1", features = ["backtrace"] }
serde_json = "1.0.99"
